--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "walletconnect-test",
+  "name": "walletconnect-test-web3",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
