--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@walletconnect/web3-provider": "^1.6.6",
-    "moralis": "^0.0.69",
+    "moralis": "0.0.104",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-moralis": "^0.2.4",
+    "react-moralis": "^0.2.6",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
